04-istio-routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: restart-demos
spec:
  selector:
    app: echo
  ports:
  - port: 5678
    targetPort: 5678
